# test_task_alma

./: .coverage  Readme.md  db.sqlite3  local.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
compose/local/django/: Dockerfile  entrypoint
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
kernel/: admin.py  models.py  services.py  tasks.py
kernel/api/: api_router.py  serializers.py  views.py
kernel/fixtures/: initial_data.json
kernel/migrations/: 0001_initial.py
test_task_alma/: api_router.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
